Folters endpoints Finished
